--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 ﻿/.vs/ArchitectureFundamentals/v16
 /OOP/bin/Debug/netcoreapp3.1
+/OOP/obj/Debug/netcoreapp3.1
+/.vs/ArchitectureFundamentals/DesignTimeBuild/.dtbcache
